Fix extra scrollbar buttons on textbox

--- a/styles/themes/classic.css
+++ b/styles/themes/classic.css
@@ -482,3 +482,8 @@
 	background: black;
 }
 
+/* turn off double buttons */
+::-webkit-scrollbar-button:start:increment,
+::-webkit-scrollbar-button:end:decrement {
+	display: none;
+}
